# ocamllings

./: CHANGELOG.md  README.md  commitlint.config.js  dune-project  ocamllings.opam  package.json
.github/workflows/: commitlint.yml  release.yml  test.yml
lib/: delta.ml  dune  lazyfib.ml  queue.ml  rle.ml  stack.ml
lib/delta/: delta.ml  dune
lib/huffman/: dune  huffman.ml
lib/lazyfib/: dune  lazyfib.ml
lib/queue/: dune  queue.ml
lib/rle/: dune
lib/stack/: dune  stack.ml
test/: dune  test_delta.ml  test_huffman.ml  test_lazyfib.ml  test_queue.ml  test_rle.ml  test_runner.ml  test_stack.ml
